[package]
name = "Rustic"
version = "0.1.0"
authors = ["BersisSe"]
description = "A simple, efficient static site generator written with Rust."
license = "Apache-2.0"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tera = "1.20.0"
