[package]
name = "rustic-ssg"
version = "0.0.1"
authors = ["BersisSe"]
description = "A simple, efficient static site generator written with Rust."
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/BersisSe/Rustic" 
readme = "README.md"
keywords = ["static-site-generator", "cli", "markdown"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
dialoguer = "0.11.0"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tera = "1.20.0"
